Fix "New User/Layout/Snippet" buttons overlapping last row of the content
Avoid -20px bottom margin in "outset" admin views. Some of these views have
"Add" buttons at the bottom and those buttons would overlap with content,
hiding the last row.

--- a/public/stylesheets/admin/main.css
+++ b/public/stylesheets/admin/main.css
@@ -552,7 +552,7 @@ body.login #content p.version {
   line-height: 1.2em;
   padding: 20px; }
   #content .outset {
-    margin: -20px; }
+    margin: -20px -20px 0; }
   #content h1 {
     margin-top: 0.25em; }
   #content table.index {
