--- a/public/stylesheets/sass/admin/_content.sass
+++ b/public/stylesheets/sass/admin/_content.sass
@@ -7,7 +7,7 @@
   line-height: 1.2em
   padding: 20px
   .outset
-    margin: -20px
+    margin: -20px -20px 0
   h1
     margin-top: 0.25em
   table
